# hands_tests

./: .gitignore  pyproject.toml  task1.py  task2.py
