[tool.poetry]
name = "testapp"
version = "0.1.0"
description = ""
authors = ["Vadim Chin <vadim@vestlite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.1"
uvloop = "^0.15.2"
python-decouple = "^3.4"
requests = "^2.25.1"
ujson = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
